# agentic-evolve

./: .gitignore  README.md  optimized_packings.json  package.json  skill.md  tsconfig.json
.claude/: evolve-improvements.md
.claude/commands/: evolve-ml.md  evolve-perf.md  evolve-sdk.md  evolve-size.md  evolve.md
.claude/skills/: evolve.md
.evolve/: benchmarks.toml  discover_benchmark.py
.evolve/fibonacci/: evaluator.py
sdk/: README.md  pyproject.toml
sdk/evolve_sdk/: __init__.py  __main__.py  config.py  progress.py  runner.py  skills.py
sdk/evolve_sdk/agents/: __init__.py  crossover.py  evaluator.py  initializer.py  mutator.py
sdk/evolve_sdk/hooks/: __init__.py  logging.py  validation.py
sdk/evolve_sdk/tools/: __init__.py
showcase/bin-packing-weibull5k/: README.md
showcase/code-golf/: CLAUDE.md  CONTRIBUTING.md  NEXT_5_TASKS.md  NEXT_BATCH.md  PROJECTION.md  README.md  TOMORROW_PLAN.md  WORKFLOW_PROMPT.md
showcase/kernelbench-triton-evolution/: .env.example  .gitignore  (+11 more)
showcase/openml-automl-benchmark/: .gitignore  CLAUDE.md  DIABETES_DEEP_DIVE.md  EVOLUTION_RESULTS.md  IMPROVEMENT_PLAN.md  LICENSE  NEXT_IMPROVEMENTS.md  README.md  RELEASE_NOTES.md  RESULTS.md  V2_ANALYSIS.md  V8_PLAN.md  V9_PLAN.md  analyze_kc2_vs_diabetes.py  analyze_winners.py  benchmark_cc18.py  benchmark_v2.py  benchmark_v3.py  benchmark_v4.py  evolve_config_template.json  evolve_diabetes_config.json  pyproject.toml  requirements.txt  run_extended_benchmark.py  visualize_findings.py
showcase/openml-automl-benchmark/adaptive_ensemble/: PROGRESS.md  README.md  __init__.py  analysis.py  benchmark.py  classifier.py  threshold_classifier.py  threshold_optimizer.py
showcase/openml-automl-benchmark/adaptive_ensemble/meta_learning/: __init__.py  detector.py  extractor.py  training.py
showcase/openml-automl-benchmark/adaptive_ensemble/meta_learning/pretrained/: detector_v1.pkl
showcase/openml-automl-benchmark/python/src/: __init__.py  baseline_runner.py  create_final_visuals.py  evaluate_dataset.py  evolve_diabetes.py  evolve_diabetes_features.py  evolve_fitness.py  evolve_kc1_features.py  evolve_kc1_manual.py  fetch_amlb_baselines.py  openml_loader.py  run_benchmark.py  visualize_diabetes.py  visualize_diabetes_fe.py  visualize_evolution.py  visualize_kc1_fe.py
showcase/openml-automl-benchmark/python/src/evolved_solutions/: baseline.py  champion.py  gen1_rfe12_smote.py  gen1_rfe_calibration.py  gen1_rfe_smote.py  gen1_rfe_smote_calibration.py  gen1_threshold_sweep.py  gen2_threshold30.py  gen2_threshold35_c1.py  gen2_threshold35_rfe12_smote.py  gen2_threshold35_smote.py  gen3_threshold33.py  gen3_threshold37.py  gen4_threshold33_rfe8.py  gen4_threshold35_rfe6.py  gen4_threshold35_rfe7.py  gen5_medical_domain.py  gen5_medical_lightgbm.py  gen5_medical_xgboost.py  gen6_medical_rfe8_thresh35.py  gen6_minimal_clinical.py  gen6_voting_ensemble.py  gen7_ensemble_thresh35.py  gen7_optimized_ensemble.py  gen8_ensemble_thresh34.py  gen8_final_ensemble.py  gen9_ensemble_thresh40.py
showcase/openml-automl-benchmark/python/src/experiments/: exp_binning.py  exp_calibration.py  exp_cv_strategy.py  exp_feature_selection.py  exp_mlp.py  exp_regularization.py  exp_smote.py  exp_stacking.py  visualize_all_experiments.py
showcase/openml-automl-benchmark/python/src/solutions/: __init__.py  baseline_logreg.py  baseline_rf.py  baseline_xgb.py
showcase/openml-automl-benchmark/results/: exp_binning_results.json  exp_calibration_results.json  exp_cv_strategy_results.json  exp_feature_selection_results.json  exp_mlp_results.json  exp_regularization_results.json  exp_smote_results.json  exp_stacking_results.json  kc1_fe_evolution_log.json
showcase/openml-automl-benchmark/scripts/: collect_training_data.py  train_meta_detector.py
showcase/openml-automl-benchmark/tests/: __init__.py  test_classifiers.py  test_meta_learning.py
showcase/string-search/rust/: Cargo.toml
showcase/string-search/rust/src/: baselines.rs  benchmark.rs  evolved.rs  lib.rs
src/: claude-integration.ts  evaluator.ts  index.ts  orchestrator.ts  population.ts  types.ts
(+500 files in other folders)
