[project]
name = "evolve-sdk"
version = "0.1.0"
description = "Agent SDK-powered evolutionary algorithm discovery with hierarchical agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Agentic Evolve"}
]
keywords = ["evolution", "genetic-algorithms", "llm", "claude", "agent-sdk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # NOTE: claude-agent-sdk is optional - package works without it for structure testing
    # "claude-agent-sdk>=0.1.0",
]

[project.optional-dependencies]
sdk = [
    "claude-agent-sdk>=0.1.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "mypy>=1.0",
    "ruff>=0.1",
]

[project.scripts]
evolve-sdk = "evolve_sdk.__main__:main"

[project.urls]
Homepage = "https://github.com/anthropics/agentic-evolve"
Repository = "https://github.com/anthropics/agentic-evolve"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["evolve_sdk"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
