[package]
name = "string_search"
version = "0.1.0"
edition = "2021"

[lib]
name = "string_search"
path = "src/lib.rs"

[[bin]]
name = "benchmark"
path = "src/benchmark.rs"

[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
